--- a/src/css/style.css
+++ b/src/css/style.css
@@ -92,7 +92,7 @@ body {
   min-height: 100vh;
   display: flex;
   align-items: center;
-  background-image: url("../img/coffee.png");
+  background-image: url("../img/coffee.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
